<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangleshape"
    android:orientation="vertical"
    android:padding="@dimen/level_rect_thickness" >

    <TextView
        android:id="@+id/tvheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_dialog_buttons"
        android:background="@drawable/custom_rounrect_flow1"
        android:padding="@dimen/padding_dialog_buttons"
        android:text="@string/rate_dialog_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/heading_text_size" />

    <TextView
        android:id="@+id/tvcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_dialog_buttons"
        android:text="@string/rate_message"
        android:textColor="@android:color/white"
        android:textSize="@dimen/content_text_size" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_dialog_buttons"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/brate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/level_rect_thickness"
            android:layout_weight="1"
            android:background="@drawable/custom_rounrect_flow2"
            android:padding="@dimen/padding"
            android:text="@string/rate"
            android:textColor="@android:color/white"
            android:textSize="@dimen/content_text_size" />

        <Button
            android:id="@+id/blater"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/level_rect_thickness"
            android:layout_weight="1"
            android:background="@drawable/custom_rounrect_flow3"
            android:padding="@dimen/padding"
            android:text="@string/later"
            android:textColor="@android:color/white"
            android:textSize="@dimen/content_text_size" />

        <Button
            android:id="@+id/bnothanks"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/level_rect_thickness"
            android:layout_weight="1"
            android:background="@drawable/custom_rounrect_flow4"
            android:padding="@dimen/padding"
            android:text="@string/no_thanks"
            android:textColor="@android:color/white"
            android:textSize="@dimen/content_text_size" />
    </LinearLayout>

</LinearLayout>