<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainGameLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/gameContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_id" >
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:id="@+id/LabelStatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/adView"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/status1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvlevelLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="@dimen/padding"
                        android:singleLine="true"
                        android:text="@string/levelLabel"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/heading_main_textsize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvlevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:text="12"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/heading_main_textsize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvpack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="@dimen/padding_dialog_buttons"
                        android:text="5x5"
                        android:textColor="@color/some_text_color"
                        android:textSize="@dimen/content_text_size" />

                    <TextView
                        android:id="@+id/tvhintlabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/padding_dialog_buttons"
                        android:text="@string/hintsLabel"
                        android:textColor="@color/some_text_color"
                        android:textSize="@dimen/content_text_size" />

                    <TextView
                        android:id="@+id/tvhint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textColor="@color/some_text_color"
                        android:textSize="@dimen/content_text_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/status2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/level_rect_thickness" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvmovesLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="@dimen/padding"
                        android:singleLine="true"
                        android:text="@string/movesLabel"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/content_text_size" />

                    <TextView
                        android:id="@+id/tvmoves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="5dip"
                        android:singleLine="true"
                        android:text="823"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/content_text_size" />

                    <TextView
                        android:id="@+id/tvbestLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="@dimen/paddingLeft"
                        android:singleLine="true"
                        android:text="@string/bestLabel"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/content_text_size" />

                    <TextView
                        android:id="@+id/tvbest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:text="5"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/content_text_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@id/ButtonLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center" >

            <Button
                android:id="@+id/bmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pack_margin_top"
                android:background="@drawable/custom_button_menu" />

            <Button
                android:id="@+id/breplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pack_margin_top"
                android:background="@drawable/custom_button_replay" />

            <Button
                android:id="@+id/bprevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pack_margin_top"
                android:background="@drawable/custom_button_back" />

            <Button
                android:id="@+id/bnext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pack_margin_top"
                android:background="@drawable/custom_button_next" />

            <Button
                android:id="@+id/bhint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pack_margin_top"
                android:background="@drawable/custom_button_hint" />
        </LinearLayout>
    </RelativeLayout>

</AbsoluteLayout>